objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <formula>IF( No_of_seats__c  &lt;= 50, &apos;Seats are available&apos;, &apos;Seats are filled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Eligibilty__c</fullName>
        <formula>IF(AND (ISPICKVAL( Status__c, &apos;In Service&apos;), Year_Of_Experience__c &gt;1), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Eligibilty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <formula>IF( Salary__c =5000, 0.20, IF( Salary__c =7500, 0.15, IF( Salary__c =10000,0.10,0 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Yavatmal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF( AND (Start_Date_TIme__c  &gt;  NOW() ,  Online_Check__c ),0.10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_seats__c</fullName>
        <label>No of seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <formula>&apos;The Course&apos;&amp; Course_Name__c &amp;&apos;begins at&apos;&amp; TEXT( Start_Date_TIme__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF( Or( Year_Of_Experience__c &gt;10, Salary__c &gt;1000000), &apos;CriticalEmployee&apos;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_TIme__c</fullName>
        <label>Start Date TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_Course__c</fullName>
        <formula>IF( Fee__c  = 0, &apos;is a free course&apos;, &apos;is a paid course&apos;)</formula>
        <label>This Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travelling_Allowence__c</fullName>
        <formula>CASE( City__c , &apos;Hyderabad&apos;, 300, &apos;Nagpur&apos;, 500,&apos;Mumbai&apos;,1000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travelling Allowence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Of_Experience__c</fullName>
        <label>Year Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Training</label>
    <nameField>
        <label>Training__c  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>